--- a/dark.css
+++ b/dark.css
@@ -1,4 +1,19 @@
 body {
   background-color: black;
   color: white;
+  font-family: "Courier New", Courier, monospace;
+}
+
+h1 {
+  background-color: green;
+}
+
+a {
+  color: lightblue;
+}
+
+.message {
+  color: green;
+  font-size: 20px;
+  text-align: center;
 }
